[package]
name = "m17n_mim_rs"
version = "0.1.0"
edition = "2024"
description = "Parser and converter for the M17N .mim input method format."
license = "LGPL-2.1-or-later"
authors = ["S. Mahmud Nabil <nabilsnigdho@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]  # allows both wasm + normal lib builds

[dependencies]
fst = "0.4.7"
wasm-bindgen = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
